[bug] Back To Top Button Overlapping Fixed

--- a/src/components/ScrollToTop/index.module.css
+++ b/src/components/ScrollToTop/index.module.css
@@ -15,7 +15,6 @@
 @media only screen and (max-width: 480px) {
   .btn--image {
     position: fixed;
-    bottom: 30px;
     right: 10px;
     font-size: 3em;
   }
